// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with blocks 1`] = `
<div
  className="flex flex-1 bg-white transition-transform"
>
  <div
    className="flex flex-row flex-1 transition-transform "
    style={
      Object {
        "marginRight": "-0px",
      }
    }
  >
    <button
      className="head__button-back button-back ml-2"
      onClick={[MockFunction]}
    />
    <div
      className="pr-block-blocks-list "
    />
  </div>
</div>
`;

exports[`should render with no block 1`] = `
<div
  className="flex flex-1 bg-white transition-transform"
>
  <div
    className="flex flex-row flex-1 transition-transform -translate-x-[0px]"
    style={
      Object {
        "marginRight": "-0px",
      }
    }
  >
    <button
      className="head__button-back button-back ml-2"
      onClick={[MockFunction]}
    />
    <div
      className="pr-block-blocks-list "
    />
  </div>
</div>
`;
